Date is deadline on title page

--- a/submissions/dissertation/dissertation.tex
+++ b/submissions/dissertation/dissertation.tex
@@ -103,7 +103,7 @@
         Department of Computer Science \\
         University of Warwick \\~\\
 
-		\today
+		September 10, 2020
 
 		\vspace*{1cm}
 
